cmake_minimum_required(VERSION 3.5)
PROJECT(LANGEVIN)
SET(CMAKE_CXX_COMPILER mpicxx)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++11 -g -O3 ")
find_package(MPI REQUIRED)
if (MPI_FOUND)
    include_directories(${MPI_CXX_INCLUDE_PATH})
endif()
find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
ADD_SUBDIRECTORY(src bin)
